Closed Bug 44603 Opened 24 years ago Closed 24 years ago

Opening .eml attachment through the enveloppe causes a crash

Categories

(MailNews Core :: Backend, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: marina, Assigned: mscott)

References

Details

(Keywords: crash, Whiteboard: [nsbeta2+] Est. 7/15)

***** observed with 2000-07-05 M17 build *****
Steps to reproduce:
- compose a new message;
- attach an eml file to it;
- send and get message;
- click on the enveloppe icon,it shows you an .eml attachment;
-click on the attachment name;
- chose 'Open file' radio button:
//note: it is still for a while and then application crashes ( it doesn't happen 
when i'm opening html or txt attachments)
here is a stack:

                                                         
[d:\builds\seamonkey\mozilla\xpcom\ds\nsStr.cpp, line 105]
     
   nsStr::GrowCapacity 
                                                         
[d:\builds\seamonkey\mozilla\xpcom\ds\nsStr.cpp, line 125]
     
   nsCString::SetCapacity 
                                                         
[d:\builds\seamonkey\mozilla\xpcom\ds\nsString.cpp, line 207]
     
   nsString::SetLength 
                                                         
[d:\builds\seamonkey\mozilla\xpcom\ds\nsString2.cpp, line 205]
     
   basic_nsAWritableString<char>::do_AppendFromReadable 
                                                         
[d:\builds\seamonkey\mozilla\xpcom\ds\nsAWritableString.h, line 551]
     
   nsCString::do_AppendFromReadable 
                                                         
[d:\builds\seamonkey\mozilla\xpcom\ds\nsString.cpp, line 964]
     
   basic_nsAWritableString<char>::do_AppendFromElementPtr
                                                         
[..\ds\nsAWritableString.h, line 559]
     
   nsCAutoString::nsCAutoString 
                                                         
[d:\builds\seamonkey\mozilla\xpcom\ds\nsString.cpp, line 1982]
     
   nsMessage::GetMsgFolder 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\base\util\nsMessage.cpp, line 505]
     
   nsImapUrl::GetFolderCharset 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\imap\src\nsImapUrl.cpp, line 1282]
     
   bridge_new_new_uri 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 126]
     
   nsStreamConverter::SetStreamURI 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 674]
     
   nsStreamConverter::Init 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 595]
     
   nsStreamConverter::AsyncConvertData 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 958]
     
   nsStreamConverterService::AsyncConvertData 
                                                         
[d:\builds\seamonkey\mozilla\netwerk\streamconv\src\nsStreamConverterService.cpp
, line 702]
     
   nsDocumentOpenInfo::RetargetOutput 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 448]
     
   nsDocumentOpenInfo::DispatchContent 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 314]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 232]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]
     
   nsStreamConverter::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsStreamConverter.cpp, line 824]
     
   nsDocumentOpenInfo::OnStartRequest 
                                                         
[d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 234]

Yeah I see this problem too. We are getting into an infinite loop.

Nominating for nsbeta2.
Keywords: crash, nsbeta2
Target Milestone: --- → M18
QA Contact: lchiang → pmock
Scott - isn't this the same bug Fenella filed today?
fenella says her bug was .txt which works fine for me. I think hers is a dup of
this though. I've asked her to double check that she's opening .txt and not .eml
*** Bug 44559 has been marked as a duplicate of this bug. ***
Putting on [nsbeta2+] radar for beta2 fix. 
Whiteboard: [nsbeta2+]
I can reproduce the crash too.  I will add this scenario to my test spec.

/Peter
adding estimated fix date.
Whiteboard: [nsbeta2+] → [nsbeta2+] Est. 7/15
Fix checked in. Now, we don't crash. We do create a browser window and show you
the message as pure text in the browser window. This is how 4.x worked too.

To test, just try to open an attachment with extension .eml.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 45414 has been marked as a duplicate of this bug. ***
Volunteer to help Peter's nsbeta2+ bug. Verify this one...
Linux (2000-07-24-08 M17)
win32 (2000-07-24-09 M17)
Mac (2000-07-24-08 M17)
Using the same scenario, this problem does not exist any more.
Status: RESOLVED → VERIFIED
QA Contact: pmock → fenella
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.