Bug #44603 --> hack to get around an infinite loop if we try to open a .eml attachment The fix: if the attachment is of type message/rfc822 then treat the outgoing content as raw data to force a new browser window to come up and display the content. r=alecf